--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,8 @@
 
 :root {
     --body-padding-h: 2rem;
+    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    --font-family-monospace: San Francisco Mono, Monaco, "Consolas", "Lucida Console", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
     --font-weight-normal: 400;
     --font-weight-bold: 600;
 }
@@ -16,7 +18,7 @@ html {
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: var(--font-family-sans-serif);
     font-weight: var(--font-weight-normal);
 
     position: relative;
@@ -72,7 +74,7 @@ code, pre {
 }
 
 code {
-    font-family: "Source Code Pro", monospace;
+    font-family: var(--font-family-monospace);
     border-radius: 0.25rem;
     padding: 0 0.15rem;
 }
@@ -197,7 +199,7 @@ header nav a:hover {
 }
 
 #logo-txt {
-    font-family: "Open Sans", sans-serif;
+    font-family: var(--font-family-sans-serif);
     font-size: 1.5rem;
     font-weight: 600;
     margin-left: 0.5rem;
@@ -236,44 +238,5 @@ footer {
 }
 
 /* }}} END FOOTER */
-
-/* FONTS {{{ */
-
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url(/fonts/Open_Sans/OpenSans-Regular.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 600;
-    src: url(/fonts/Open_Sans/OpenSans-SemiBold.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 400;
-    src: url(/fonts/Open_Sans/OpenSans-Italic.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 600;
-    src: url(/fonts/Open_Sans/OpenSans-SemiBoldItalic.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 400;
-    src: url(/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf) format('truetype');
-}
-
-/* }}} FONTS */
 
 /* vim: set fdm=marker: */
