--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 /* GENERAL {{{ */
 
 :root {
-    --body-padding-h: 2rem;
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     --font-family-monospace: San Francisco Mono, Monaco, "Consolas", "Lucida Console", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
     --font-weight-normal: 400;
@@ -21,18 +20,24 @@ body {
     font-family: var(--font-family-sans-serif);
     font-weight: var(--font-weight-normal);
 
-    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
+
     max-width: 50rem;
     min-height: 100%;
     margin: auto;
-    padding: 5rem var(--body-padding-h) 4rem var(--body-padding-h);
+    padding: 0 2rem;
 }
 
-@media only screen and (max-width: 30rem) {
-    body {
-        padding-top: 7rem;
-        padding-bottom: 6rem;
-    }
+main {
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  margin: 2rem 0;
+}
+
+main > :first-child {
+  margin-top: 0;
 }
 
 h1, h2, h3, h4, h5, h6, strong, b {
@@ -153,10 +158,8 @@ header {
     padding: 0.5rem 0;
     border-bottom: solid grey 1px;
 
-    position: absolute;
-    top: 0;
-    left: var(--body-padding-h);
-    right: var(--body-padding-h);
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 header nav ul {
@@ -229,13 +232,11 @@ footer {
     font-size: 0.8rem;
     text-align: center;
 
-    position: absolute;
-    bottom: 0;
-    left: var(--body-padding-h);
-    right: var(--body-padding-h);
-    padding: 0.5rem 0;
+    flex-grow: 0;
+    flex-shrink: 0;
 
     border-top: solid grey 1px;
+    padding: 0.5rem 0;
 }
 
 /* }}} END FOOTER */
