Fix miscellaneous styling mistakes
I discovered these while working on other things, and while they haven't
caused any problems yet, they could in the future.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,11 +109,11 @@ blockquote {
     width: calc(100% - 0.5rem);
 }
 
-blockquote :first-child {
+blockquote > :first-child {
     margin-top: 0;
 }
 
-blockquote :last-child {
+blockquote > :last-child {
     margin-bottom: 0;
 }
 
@@ -162,8 +162,11 @@ header {
     flex-shrink: 0;
 }
 
-header nav ul {
+header nav {
     flex-shrink: 0;
+}
+
+header nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
