Add Atreus review

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,13 @@ a:hover {
     border-bottom-style: solid;
 }
 
+img {
+    display: block;
+    margin: 2rem auto;
+    max-width: 100%;
+    width: auto;
+}
+
 code, pre {
     background: #f4f4f4;
 }
