--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/creations">Creations</a></li>
+      <li><a href="/books">Books</a></li>
       <li><a href="/blog">Blog</a></li>
       <li><a href="/resume">Resume</a></li>
     </ul>
