Make minor style improvements
The line height improves readability, particularly for the line of text
below a link.

Allowing `<pre>` elements to scroll their contents prevents overflow for
long lines.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ html {
 body {
     font-family: var(--font-family-sans-serif);
     font-weight: var(--font-weight-normal);
+    line-height: 1.4;
 
     display: flex;
     flex-flow: column nowrap;
@@ -94,6 +95,7 @@ code {
 pre {
     border-radius: 0.5rem;
     padding: 0.5rem;
+    overflow: auto;
 }
 
 pre code {
