Use emoji to indicate how I liked a book

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,4 +278,28 @@ footer {
 
 /* }}} END FOOTER */
 
+/* BOOKS {{{ */
+
+.book-list li {
+  padding-inline-start: 0.5rem;
+}
+
+.book-great {
+  list-style-type: "🙌";
+}
+
+.book-good {
+  list-style-type: "👍";
+}
+
+.book-okay {
+  list-style-type: "🤷";
+}
+
+.book-bad {
+  list-style-type: "👎";
+}
+
+/* }}} END BOOKS */
+
 /* vim: set fdm=marker: */
