Improve RSS metadata presentation

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div id="logo">
     <img id="logo-img" src="/images/logo.png" alt=""/>
-    <span id="logo-txt">{{ .Site.Title }}</span>
+    <span id="logo-txt">Jason Cox</span>
   </div>
   <nav>
     <ul>
