--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer>
-  &copy; Jason Cox |
+  {{ .Site.Copyright | markdownify }} &nbsp;|&nbsp;
   <a href="mailto:hi@jasoncarloscox.com">Email</a> &middot;
   <a href="https://github.com/jasonccox">GitHub</a> &middot;
   <a href="https://linkedin.com/in/jasoncarloscox">LinkedIn</a> &middot;
-  <a href="/index.xml">RSS</a> |
+  <a href="/index.xml">RSS</a> &nbsp;|&nbsp;
   See the <a href="https://github.com/jasonccox/hugo-site">source</a> on GitHub
 </footer>
