--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,10 @@ code, pre {
     background: #f4f4f4;
 }
 
+.highlight code, .highlight pre {
+    background: unset;
+}
+
 code {
     font-family: var(--font-family-monospace);
     border-radius: 0.25rem;
