--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,38 @@
     --font-family-monospace: San Francisco Mono, Monaco, "Consolas", "Lucida Console", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
     --font-weight-normal: 400;
     --font-weight-bold: 600;
+
+    --color-bg: #ffffff;
+    --color-text: #000000;
+    --color-link: #0000ff;
+    --color-link-hover: #00008b;
+    --color-code-bg: #f4f4f4;
+    --color-rule: #808080;
+    --color-aside: #333333;
+    --color-aside-brackets: #aaaaaa;
+    --color-blockquote-bg: #eaf2fd;
+    --color-blockquote-border: #6c98ce;
+    --color-nav: #000000;
+    --color-nav-hover: #808080;
+    --color-footer: #444444;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-bg: #111111;
+    --color-text: #ffffff;
+    --color-link: #00aaff;
+    --color-link-hover: #0055ff;
+    --color-code-bg: #222222;
+    --color-rule: #808080;
+    --color-aside: #bbbbbb;
+    --color-aside-brackets: #666666;
+    --color-blockquote-bg: #25354d;
+    --color-blockquote-border: #53749b;
+    --color-nav: #ffffff;
+    --color-nav-hover: #808080;
+    --color-footer: #bbbbbb;
+  }
 }
 
 * {
@@ -17,6 +49,9 @@ html {
 }
 
 body {
+    background: var(--color-bg);
+    color: var(--color-text);
+
     font-family: var(--font-family-sans-serif);
     font-weight: var(--font-weight-normal);
     line-height: 1.4;
@@ -63,15 +98,15 @@ h4 {
 }
 
 a {
-    color: blue;
+    color: var(--color-link);
     text-decoration: none;
-    border-bottom: dotted blue 1px;
+    border-bottom: dotted var(--color-link) 1px;
 }
 
 a:hover {
-    color: darkblue;
+    color: var(--color-link-hover);
     text-decoration: none;
-    border-bottom-color: darkblue;
+    border-bottom-color: var(--color-link-hover);
     border-bottom-style: solid;
 }
 
@@ -83,11 +118,7 @@ img {
 }
 
 code, pre {
-    background: #f4f4f4;
-}
-
-.highlight code, .highlight pre {
-    background: unset;
+    background: var(--color-code-bg);
 }
 
 code {
@@ -102,6 +133,7 @@ pre {
 }
 
 pre code {
+    background: inherit;
     border-radius: unset;
     display: block;
     overflow: auto;
@@ -112,17 +144,17 @@ hr {
     margin: 3rem auto;
     width: 25%;
     border: none;
-    border-top: 1px grey solid;
+    border-top: 1px var(--color-rule) solid;
 }
 
 aside {
-    color: #333333;
+    color: var(--color-aside);
     position: relative;
     padding: 0.375rem 1rem;
 }
 
 aside:before, aside:after {
-    border: 0.125rem solid #aaaaaa;
+    border: 0.125rem solid var(--color-aside-brackets);
     content: " ";
     position: absolute;
     top: 0;
@@ -141,8 +173,8 @@ aside:after {
 }
 
 blockquote {
-    background-color: #eaf2fd;
-    border-left: 0.5rem solid #6c98ce;
+    background-color: var(--color-blockquote-bg);
+    border-left: 0.5rem solid var(--color-blockquote-border);
     padding: 0.5rem;
     margin-left: 0.5rem;
     width: calc(100% - 0.5rem);
@@ -182,7 +214,7 @@ aside > :last-child, blockquote > :last-child {
     left: -15rem;
     z-index: 1;
     text-align: center;
-    background: #ffffff;
+    background: var(--color-bg);
 }
 
 #skip-to-main:focus {
@@ -195,7 +227,7 @@ header {
     align-items: center;
     flex-wrap: wrap;
     padding: 0.5rem 0;
-    border-bottom: solid grey 1px;
+    border-bottom: solid var(--color-rule) 1px;
 
     flex-grow: 0;
     flex-shrink: 0;
@@ -224,12 +256,12 @@ header nav ul li:last-of-type {
 }
 
 header nav a {
-    color: black;
+    color: var(--color-nav);
     border: none;
 }
 
 header nav a:hover {
-    color: grey;
+    color: var(--color-nav-hover);
     border: none;
 }
 
@@ -270,14 +302,14 @@ header nav a:hover {
 /* FOOTER {{{ */
 
 footer {
-    color: grey;
+    color: var(--color-footer);
     font-size: 0.8rem;
     text-align: center;
 
     flex-grow: 0;
     flex-shrink: 0;
 
-    border-top: solid grey 1px;
+    border-top: solid var(--color-rule) 1px;
     padding: 0.5rem 0;
 }
 
