--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     --font-family-monospace: San Francisco Mono, Monaco, "Consolas", "Lucida Console", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
     --font-weight-normal: 400;
-    --font-weight-bold: 600;
+    --font-weight-bold: 500;
 
     --color-bg: #ffffff;
     --color-text: #000000;
@@ -23,6 +23,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --font-weight-normal: 300;
+    --font-weight-bold: 400;
+
     --color-bg: #111111;
     --color-text: #ffffff;
     --color-link: #00aaff;
@@ -279,7 +282,7 @@ header nav a:hover {
 #logo-txt {
     font-family: var(--font-family-sans-serif);
     font-size: 1.5rem;
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
     margin-left: 0.5rem;
 }
 
