--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
     --color-bg: #111111;
     --color-text: #ffffff;
     --color-link: #00aaff;
-    --color-link-hover: #0055ff;
+    --color-link-hover: #00ccff;
     --color-code-bg: #222222;
     --color-rule: #808080;
     --color-aside: #bbbbbb;
