--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,10 @@ header nav a:hover {
     border: none;
 }
 
+header nav a.active {
+    font-weight: var(--font-weight-bold);
+}
+
 #logo {
     display: flex;
     align-items: center;
