--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,11 +5,31 @@
   </div>
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/creations">Creations</a></li>
-      <li><a href="/books">Books</a></li>
-      <li><a href="/blog">Blog</a></li>
-      <li><a href="/resume">Resume</a></li>
+      <li>
+        <a href="/" {{ if .IsHome }} class="active" {{ end }}>
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="/creations" {{ if eq .Type "creations" }} class="active" {{ end }}>
+          Creations
+        </a>
+      </li>
+      <li>
+        <a href="/books" {{ if eq .Type "books" }} class="active" {{ end }}>
+          Books
+        </a>
+      </li>
+      <li>
+        <a href="/blog" {{ if eq .Type "blog" }} class="active" {{ end }}>
+          Blog
+        </a>
+      </li>
+      <li>
+        <a href="/resume" {{ if eq .RelPermalink "/resume/" }} class="active" {{ end }}>
+          Resume
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
