Rebrand resume as CV

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,8 +31,8 @@
         </a>
       </li>
       <li>
-        <a href="/resume" {{ if eq .RelPermalink "/resume/" }} class="active" {{ end }}>
-          Resume
+        <a href="/cv" {{ if eq .RelPermalink "/cv/" }} class="active" {{ end }}>
+          CV
         </a>
       </li>
     </ul>
