Put page-specific styles in templates
Remove them from the global stylesheet and from the Markdown content.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,6 +28,7 @@
       <link rel="stylesheet" href="{{ $highlight_style.Permalink }}" />
     {{ end }}
 
+    {{ block "page-styles" . }}{{ end }}
     {{ range .AlternativeOutputFormats -}}
       <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .RelPermalink | safeURL }}">
     {{ end -}}
