Update links to eliminate extra redirect

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,6 @@
   <a href="https://github.com/jasonccox">GitHub</a> &middot;
   <a href="https://linkedin.com/in/jasoncarloscox">LinkedIn</a> &middot;
   <a href="/index.xml">RSS</a> &middot;
-  <a href="/subscribe">Subscribe</a> &nbsp;|&nbsp;
+  <a href="/subscribe/">Subscribe</a> &nbsp;|&nbsp;
   See the <a href="https://github.com/jasonccox/hugo-site">source</a> on GitHub
 </footer>
