--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,27 +11,27 @@
         </a>
       </li>
       <li>
-        <a href="/blog" {{ if eq .Type "blog" }} class="active" {{ end }}>
+        <a href="/blog/" {{ if eq .Type "blog" }} class="active" {{ end }}>
           Blog
         </a>
       </li>
       <li>
-        <a href="/books" {{ if eq .Type "books" }} class="active" {{ end }}>
+        <a href="/books/" {{ if eq .Type "books" }} class="active" {{ end }}>
           Books
         </a>
       </li>
       <li>
-        <a href="/creations" {{ if eq .Type "creations" }} class="active" {{ end }}>
+        <a href="/creations/" {{ if eq .Type "creations" }} class="active" {{ end }}>
           Creations
         </a>
       </li>
       <li>
-        <a href="/research" {{ if eq .Type "research" }} class="active" {{ end }}>
+        <a href="/research/" {{ if eq .Type "research" }} class="active" {{ end }}>
           Research
         </a>
       </li>
       <li>
-        <a href="/cv" {{ if eq .RelPermalink "/cv/" }} class="active" {{ end }}>
+        <a href="/cv/" {{ if eq .RelPermalink "/cv/" }} class="active" {{ end }}>
           CV
         </a>
       </li>
