--- a/layouts/partials/last-updated.html
+++ b/layouts/partials/last-updated.html
@@ -7,6 +7,6 @@
 
 {{ if $date }}
 <p class="last-updated">
-  [Last updated {{ dateFormat "January 2, 2006" $date }}]
+  [This page was last updated on {{ dateFormat "January 2, 2006" $date }}]
 </p>
 {{ end }}
