Remove links when displaying a page's summary
Also centralize summary rendering using the `.Render` function.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
             {{ $link = .Params.redirect }}
           {{ end }}
           <a href="{{ $link  }}">{{ .Title }}</a>:
-          <span>{{ .Summary | replaceRE "</?p>" "" | safeHTML }}</span>
+          <span>{{ .Render "summary" }}</span>
         </p>
       </li>
     {{ end }}
