Move hugo-site to SourceHut

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,5 +3,5 @@
   <a href="mailto:hi@jasoncarloscox.com">Email</a> &middot;
   <a href="/index.xml">RSS</a> &middot;
   <a href="/subscribe/">Subscribe</a> &nbsp;|&nbsp;
-  See the <a href="https://github.com/jasonccox/hugo-site">source code</a>
+  See the <a href="https://git.sr.ht/~jcc/hugo-site">source code</a>
 </footer>
